fixed games page alignment

--- a/src/style/mixins.less
+++ b/src/style/mixins.less
@@ -1,7 +1,7 @@
 
 .flex-center () {
     display: flex;
-    justify-content: center;
+    justify-content: initial;
     align-items: center;
     flex-wrap: wrap;
 }
